uui/components/typography/Text.module.scss
@mixin text-color($color) {
    &.uui-text.uui-color-#{$color} {
        --uui-text: var(--uui-text-#{$color});
    }
}

@mixin font-weight($weight) {
    &.uui-font-weight-#{$weight} {
        --uui-text-font-weight: #{$weight};
    }
}

@mixin font-style($style) {
    &.uui-font-style-#{$style} {
        --uui-text-font-style: #{$style};
    }
}

.root {
    --uui-text: var(--uui-color-70);
    --uui-text-font: var(--uui-font);
    --uui-text-font-weight: 400;
    --uui-text-font-style: normal;
    //
    font-family: var(--uui-text-font);
    font-weight: var(--uui-text-font-weight);
    font-style: var(--uui-text-font-style);
    color: var(--uui-text);

    &:global {
        &.uui-text.uui-color-white {
            --uui-text: var(--uui-neutral-0);
        }

        @include text-color('brand');
        @include text-color('primary');
        @include text-color('secondary');
        @include text-color('disabled');

        @include font-weight(200);
        @include font-weight(300);
        @include font-weight(400);
        @include font-weight(600);
        @include font-weight(700);
        @include font-weight(900);

        @include font-style('normal');
        @include font-style('italic');
    }
}

